syntax = "proto3";

package user;

option go_package = "./pkg/user/pb";

service AuthService {
  rpc SampleRequest(RegisterRequest) returns (RegisterResponse) {}
}

// Register

message RegisterRequest {
  string request = 1;
}

message RegisterResponse {
  string response = 1;
}

